# Cadmus

./: .gitignore  Cargo.toml  actual_diff  docker-compose.yml  flake.nix  todo.md
cadmus_cli/: Cargo.toml
cadmus_cli/fmp_project/: blank.fmp12  mixed.fmp12
cadmus_cli/src/: cli.rs  commands.rs  error.rs  main.rs
cadmus_hbam/: Cargo.toml
cadmus_hbam/src/: lib.rs  mod.rs
cadmus_hbam/test_data/: mixed.fmp12
cadmus_lang/: Cargo.toml
cadmus_lang/src/: cache.rs  (+11 more)
cadmus_monitor/: Cargo.toml  README.md  build.rs
cadmus_monitor/src/: change.rs  handler.rs  main.rs
cadmus_objects/: Cargo.toml
cadmus_server/: Cargo.toml  build.rs
cadmus_server/.cargo/: config.toml
cadmus_server/examples/: gen_key.rs  quick_dev.rs
cadmus_server/proto/: monitor.proto
cadmus_server/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
cadmus_server/src/: config.rs  error.rs  main.rs
cadmus_server/src/_dev_utils/: dev_db.rs  mod.rs
cadmus_server/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
cadmus_server/src/ctx/: error.rs  mod.rs
cadmus_server/src/model/: base.rs  error.rs  mod.rs  project.rs  user.rs
cadmus_server/src/model/store/: error.rs  mod.rs
cadmus_server/src/monitor_service/: mod.rs  monitor.rs
cadmus_server/src/project_store/: mod.rs  project.rs
cadmus_server/src/store/: mod.rs
cadmus_server/src/utils/: error.rs  mod.rs
cadmus_server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
cadmus_server/src/web/rest/: error.rs  mod.rs  project_rest.rs
cadmus_test/: Cargo.toml
cadmus_util/: Cargo.toml
common/: Cargo.toml  diff  log.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt
doc/: cadlang.md  draco_behaviour.md  fmp_format.md
docs/: cadlang.md  fmp_format.md
frontend/: package-lock.json  package.json
inspect_output/: blank_chunks.txt  test_decompile_patched  test_input
migrations/: 20250304191115_init.sql  20250305192919_fixed_typo.sql
protos/: monitor.proto
scripts/: decode_timestamp.py
src/: cli.rs  diff.rs  main.rs  schema.rs  staging_buffer.rs
test_data/: generate.sh  generate_inner.applescript
(+268 files in other folders)
