[package]
name = "cadmus_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.1" }
prost = "0.13.5"
tonic = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate", "time", "chrono"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
tonic-build = "*"
