[package]
name = "cadmus_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["macros"] }
prost = "0.13.5"
tonic = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate", "time", "chrono", "uuid"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = "0.16.1"
serde_with = "3.12.0"
async-trait = "0.1.87"
tower-cookies = "0.11.0"
uuid = { version = "1.15.1", features = ["v4"] }
strum_macros = "0.27.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serial_test = "3.2.0"

[build-dependencies]
tonic-build = "*"
